Add doc comments - Add modification comments for Apache license - Add Settings.ts for settings schema

--- a/sidebar.html
+++ b/sidebar.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<!-- This file has been modified from the Google Forms add-on template -->
 <head>
   <base target="_top">
   <link rel="stylesheet" href="https://ssl.gstatic.com/docs/script/css/add-ons1.css">
