Add README.md and LICENSE, fix bugs - Remove vite preview script - Fix notification switch being hidden in sidebar.html

--- a/public/authorizationEmail.html
+++ b/public/authorizationEmail.html
@@ -1,4 +1,5 @@
-<p>The Google Forms add-on <i>Form Notifications</i> is set to run automatically
+<!-- This file has been modified from the Google Forms add-on sample -->
+<p>The Google Forms add-on <i>Turnstile for Forms</i> is set to run automatically
     whenever a form is submitted. The add-on was recently updated and it needs you
     to re-authorize it to run on your behalf.</p>
 
@@ -14,5 +15,4 @@
 
 <hr>
 
-<p style="font-size:80%">This automatic message was sent to you via the <i>Form
-    Notifications</i> add-on for Google Forms.</p>
+<p style="font-size:80%">This automatic message was sent to you via the <i>Turnstile for Forms</i> add-on for Google Forms.</p>
